# wer-offline-installer

./: .gitignore  Cargo.toml  LICENSE  README.md  Reporter.exe.config
countries/: de-de.xml  en-us.xml  es-mx.xml  fr-fr.xml  it-it.xml  ja-jp.xml  ko-kr.xml  pt-br.xml  ru-ru.xml  zh-CN.xml  zh-TW.xml
src/: main.rs
